# p-way-merge

./: .gitignore  .pre-commit-format  CMakeLists.txt  Makefile  ru.README.md
images/: loser_tree_as_merge.drawio
include/pmerge/common/: assert.hpp  print.hpp  resource.hpp  vector_resource.hpp
include/pmerge/fs/: records_source.hpp
include/pmerge/multi_way/: linear_multi_way.hpp  loser_tree.hpp
include/pmerge/simd/: inregister_merge.hpp  utils.hpp
include/pmerge/two_way/: simd_two_way.hpp
include/pmerge/utils/: count.hpp  defer.hpp  magic_trace.hpp  time_interval.hpp
include/pmerge/ydb/: merge_pway_input_data.h  merge_reference.hpp  merge_spilling_blocks.hpp  spilling_block_reader.hpp  spilling_block_resource.hpp  spilling_blocks_buffer.hpp  spilling_blocks_writer.hpp  spilling_mem.h  types.hpp
pmerge/common/: resource.cpp  vector_resource.cpp
pmerge/fs/: simple_records_source.cpp
pmerge/multi_way/: linear_multi_way.cpp
pmerge/simd/: utils.cpp
pmerge/tests/: bench.cpp  gtest_utils.hpp  loser_tree_test.cpp  merge_test.cpp  pack_test.cpp  pway_merge_test.cpp  simd_two_way_spilling_block_test.cpp  simd_two_way_vector_resource_test.cpp  spilling_block_test.cpp  utils.hpp  ydb_interface_merge_test.cpp
pmerge/ydb/: spilling_mem.cpp
